--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="sv-SE"><head>
-    
+    <script src="https://www.ohjoycasino.com/ad/cse.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
     <title>Casino Utan Svensk Licens [2025] 🎖️ Online Casino Utan Spelpaus!</title>
